--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -60,7 +60,12 @@
                     <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a></li>
                     <li>Analisis y limpieza de datos (preprocesamiento):
                         <ul>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos.ipynb">Graficos para analisis</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A0_intro.ipynb">Intro al analisis y preprocesamiento de datos</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos_seaborn.ipynb">Graficos para analisis</a>
+                                <ul>
+                                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb">Graficos avanzados</a></li>
+                                </ul>
+                            </li>
                             <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb">Jugando con Pandas (material opcional)</a></li>
                             <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb">Jugando con Numpy (material opcional)</a></li>
                         </ul>
