--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -72,11 +72,11 @@
                     </li>
                     <li>Espiando adentro de las cajas negras (material opcional avanzado):
                         <ul>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.2_knn.ipynb">Vecinos Cercanos (KNN)</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.2_knn.ipynb">Arboles de Decision (Decision Trees)</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.2_knn.ipynb">Regresion Lineal y Logistica (Lineal and Logistic Regression)</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.2_knn.ipynb">Naive Bayes</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4.2_knn.ipynb">Ensambles (Ensembles)</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E1_knn.ipynb">Vecinos Cercanos (KNN)</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E2_arbol.ipynb">Arboles de Decision (Decision Trees)</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E3_regresion_lineal.ipynb">Regresion Lineal y Logistica (Lineal and Logistic Regression)</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E4_naive_bayes.ipynb">Naive Bayes</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E5_ensambles.ipynb">Ensambles (Ensembles)</a></li>
                         </ul>
                     </li>
                 </ul>
