--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -52,10 +52,11 @@
                 <h2>Contenido:</h2>
                 <ul>
                     <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/0_intro.ipynb">De imagenes a vectores</a></li>
-                    <li>Unidad 0: <a href="#">De texto a vectores</a></li>
+                    <li>Unidad 0.1: <a href="#">De texto a vectores</a></li>
                     <li>Unidad 1: <a href="#">Cajas negras preentrenadas y fine tuning</a></li>
                     <li>Unidad 2: LLM APIs
                         <ul>
+                            <li><a href="#">Base de datos Vectoriales</a></li>
                             <li><a href="#">OpenAI</a></li>
                             <li><a href="#">LangChain</a></li>
                         </ul>
@@ -72,6 +73,7 @@
                                     <li><a href="#">Transformers</a></li>
                                 </ul>
                             </li>
+                            <li><a href="#">El viejo y conocido KNN</a></li>
                         </ul>
                     </li>
                     
