--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -1,106 +1,120 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Raleway:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../../assets/css/styles.css">
+<title>Free Coding Tour</title>
+</head>
+<body>
+  <!-- Header Section -->
+  <header>
+    <div class="container nav">
+    <a class="logo" href="https://www.freecodingtour.com/index.html">Free<br>Coding<br>Tour.</a>
+      <nav>
+        <ul>
+          <li><a href="https://www.freecodingtour.com/index.html#tours">Coding Tours</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-<!doctype html>
-<html lang="en">
-    <head>
-        <title>Ciencia de Datos Coding Tour</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../../../assets/css/style.css">
-        <meta name="robots" content="noindex, follow">
-    </head>
-    <body>
-        <div class="wrapper d-flex align-items-stretch">
-            <nav id="sidebar">
-                <div class="custom-menu">
-                    <button type="button" id="sidebarCollapse" class="btn btn-primary">
-                        <i class="fa fa-bars"></i>
-                        <span class="sr-only">Toggle Menu</span>
-                    </button>
-                </div>
-                <div class="p-4 pt-5">
-                    <h1><a href="../../../index.html">Free<br/>Coding<br/>Tour</a><br/><br/></h1>
-                    <ul class="list-unstyled components mb-5">
-                        <li class="active">
-                            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="true" class="dropdown-toggle">Coding Tours</a>
-                            <ul class="collapse list-unstyled" id="homeSubmenu">
-                                <li><a href="../programacion/programacion.html">Programacion</a></li>
-                                <li><a href="#">Ciencia de Datos</a></li>
-                                <li><a href="../deeplearning/deeplearning.html">Deep Learning</a></li>
-                                <!--li><a href="#">Blockchain</a></li>
-                                <li><a href="#">Programacion Cuantica</a></li-->
-                            </ul>
-                        </li>
-                        <li><a href="../../../contact.html">Dudas y Sugerencias</a></li>
-                        <li><a href="../../../clases_presenciales.html">Clases Presenciales</a></li>
-                        <li><a href="../../../aboutus.html">Sobre FCT</a></li>
-                        <!--li><a href="../../../meetdates.html">Fechas de meet</a></li-->
-                    </ul>
-                    <br/><br/><br/>
-                    <a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a><br/>
-                    <!--a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a><br/-->
-                    <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.es"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
-                    <div class="footer"></div>
-                </div>
-            </nav>
-
-            <div id="content" class="p-4 p-md-5 pt-5">
-                <h1 class="mb-4">Ciencia de Datos Coding Tour</h1>
-                <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar
-                    las herramientas de la ciencia de datos en sus respectivas actividades.</p>
-                <h2>Contenido:</h2>
+  <!-- Classes Section -->
+  <section id="classes" class="classes container">
+    <div class="classes-info">
+        <h1>Ciencia de Datos Coding Tour</h1>
+        <p class="classes-intro">Curso para que personas de diferentes ambitos y formaciones puedan utilizar
+          las herramientas de la ciencia de datos en sus respectivas actividades.</p>
+        <h3>Contenido</h3>
+        <ul>
+            <li>Unidad 0: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono movil</a></li>
+            <li>Unidad 1: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/1_pandas.ipynb">Convertir mis datos en una tabla</a></li>
+            <li>Unidad 2: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/2_vectores.ipynb">Convertir todos los datos a numeros</a></li>
+            <li>Unidad 3: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
+            <li>Unidad 4: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
+            <li>Unidad 5: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
+            <li>
+                Unidad 6: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a>
                 <ul>
-                    <li>Unidad 0: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono movil</a></li>
-                    <li>Unidad 1: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/1_pandas.ipynb">Convertir mis datos en una tabla</a></li>
-                    <li>Unidad 2: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/2_vectores.ipynb">Convertir todos los datos a numeros</a></li>
-                    <li>Unidad 3: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
-                    <li>Unidad 4: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
-                    <li>Unidad 5: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
-                    <li>
-                        Unidad 6: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a>
-                        <ul>
-                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6.1_ejercicio_diabetes_parte1.ipynb">Ejercicio de Clasificacion Parte 1</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        Unidad 7: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a>
-                        <ul>
-                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb">Ejercicio de Clasificacion Parte 2</a></li>
-                        </ul>
-                    </li>
-                    <li>Analisis y limpieza de datos (preprocesamiento):
-                        <ul>
-                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A0_intro.ipynb">Intro al analisis y preprocesamiento de datos</a></li>
-                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos_seaborn.ipynb">Graficos para analisis</a>
-                                <ul>
-                                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb">Graficos avanzados</a></li>
-                                </ul>
-                            </li>
-                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb">Jugando con Pandas (material opcional)</a></li>
-                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb">Jugando con Numpy (material opcional)</a></li>
-                        </ul>
-                    </li>
-                    <li>Espiando adentro de las cajas negras (material opcional avanzado):
-                        <ul>
-                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E1_knn.ipynb">Vecinos Cercanos (KNN)</a></li>
-                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E2_arbol.ipynb">Arboles de Decision (Decision Trees)</a></li>
-                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E3_regresion_lineal.ipynb">Regresion Lineal y Logistica (Lineal and Logistic Regression)</a></li>
-                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E4_naive_bayes.ipynb">Naive Bayes</a></li>
-                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E5_ensambles.ipynb">Ensambles (Ensembles)</a></li>
-                        </ul>
-                    </li>
+                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6.1_ejercicio_diabetes_parte1.ipynb">Ejercicio de Clasificacion Parte 1</a></li>
                 </ul>
+            </li>
+            <li>
+                Unidad 7: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a>
+                <ul>
+                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb">Ejercicio de Clasificacion Parte 2</a></li>
+                </ul>
+            </li>
+        </ul>
 
-                
-            </div>
-        </div>
-        <script src="../../../assets/js/jquery.min.js"></script>
-        <script src="../../../assets/js/popper.js"></script>
-        <script src="../../../assets/js/bootstrap.min.js"></script>
-        <script src="../../../assets/js/main.js"></script>
-        <script src="https://getinsights.io/js/insights.js"></script>
-        <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
-        <script async defer src="https://buttons.github.io/buttons.js"></script>
-    </body>
+        <hr class="separator">
+
+        <h3>Analisis y limpieza de datos (preprocesamiento):</h3>
+        <ul>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A0_intro.ipynb">Intro al analisis y preprocesamiento de datos</a></li>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos_seaborn.ipynb">Graficos para analisis</a>
+              <ul>
+                  <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb">Graficos avanzados</a></li>
+              </ul>
+          </li>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb">Jugando con Pandas (material opcional)</a></li>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb">Jugando con Numpy (material opcional)</a></li>
+        </ul>
+
+        <hr class="separator">
+
+        <h3>Espiando adentro de las cajas negras (material opcional avanzado):</h3>
+        <ul>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E1_knn.ipynb">Vecinos Cercanos (KNN)</a></li>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E2_arbol.ipynb">Arboles de Decision (Decision Trees)</a></li>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E3_regresion_lineal.ipynb">Regresion Lineal y Logistica (Lineal and Logistic Regression)</a></li>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E4_naive_bayes.ipynb">Naive Bayes</a></li>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E5_ensambles.ipynb">Ensambles (Ensembles)</a></li>
+        </ul>
+
+    </div>
+  </section>
+
+  <!-- Footer Section -->
+  <footer>
+    <div class="footer-container">
+      <div class="sitemap-section">
+        <h3>Cursos</h3>
+        <ul>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">Programacion</a></li>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">Ciencia de Datos</a></li>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">Inteligencia Artificial</a></li>
+        </ul>
+      </div>
+      <div class="sitemap-section">
+        <h3>Secciones</h3>
+        <ul>
+          <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
+        </ul>
+      </div>
+      <div class="sitemap-section">
+        <h3><a href="#">Free<br>Coding<br>Tour.</a></h3>
+      </div>
+    </div>
+  </footer>
+
+  <!-- The Modal -->
+  <div id="videoModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+      <iframe width="560" height="315" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
+  </div>
+
+  <script src="../../../assets/js/script.js"></script>
+  <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
+
+</body>
 </html>
