--- a/index.html
+++ b/index.html
@@ -1,97 +1,190 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Raleway:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./assets/css/styles.css">
+<title>Free Coding Tour</title>
+</head>
+<body>
+  <!-- Header Section -->
+  <header>
+    <div class="container nav">
+    <a class="logo" href="https://www.freecodingtour.com/index.html">Free<br>Coding<br>Tour.</a>
+      <nav>
+        <ul>
+          <li><a href="https://www.freecodingtour.com/index.html#tours">Coding Tours</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-<!doctype html>
-<html lang="en">
-    <head>
-        <title>Free Coding Tour</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <meta name="robots" content="noindex, follow">
-    </head>
-    <body>
-        <div class="wrapper d-flex align-items-stretch">
-            <nav id="sidebar">
-                <div class="custom-menu">
-                    <button type="button" id="sidebarCollapse" class="btn btn-primary">
-                        <i class="fa fa-bars"></i>
-                        <span class="sr-only">Toggle Menu</span>
-                    </button>
-                </div>
-                <div class="p-4 pt-5">
-                    <h1 ><a href="#">Free<br/>Coding<br/>Tour</a><br/><br/></h1>
-                    <ul class="list-unstyled components mb-5">
-                        <li class="active">
-                            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Coding Tours</a>
-                            <ul class="show list-unstyled" id="homeSubmenu">
-                                <li><a href="./cursos/espanol/programacion/programacion.html">Programacion</a></li>
-                                <li><a href="./cursos/espanol/datascience/datascience.html">Ciencia de Datos</a></li>
-                                <li><a href="./cursos/espanol/deeplearning/deeplearning.html">Deep Learning</a></li>
-                                <!--li><a href="#">Data Science</a></li>
-                                <li><a href="#">Blockchain</a></li>
-                                <li><a href="#">Programacion Cuantica</a></li-->
-                            </ul>
-                        </li>
-                        <li><a href="contact.html">Dudas y Sugerencias</a></li>
-                        <li><a href="clases_presenciales.html">Clases Presenciales</a></li>
-                        <li><a href="aboutus.html">Sobre FCT</a></li>
-                        <!--li><a href="meetdates.html">Fechas de meet</a></li-->
-                        <!--li><a href="#">Cursos Presenciales</a></li-->
-                    </ul>
-                    <br/><br/><br/>
-                    <a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a><br/>
-                    <!--a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a><br/-->
-                    <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.es"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
-                    <div class="footer"></div>
-                </div>
-            </nav>
+  <!-- Introduction Section -->
+  <section class="intro container">
+    <h2>Aqui encontraras cursos de programacion faciles y gratuitos 
+        para aprender desde cero sin conocimientos previos y sin 
+        instalar ningun software ni necesitar una computadora especial:</h2>
+    <ul>
+        <li>Totalmente gratuitos.</li>
+        <li>Interactivos y sin necesidad 
+        de instalar software especial.</li>
+        <li>Accesible para personas que no tienen 
+        conocimientos previos de computacion ni matematicas.</li>
+    </ul>
+  </section>
 
-            <div id="content" class="p-4 p-md-5 pt-5">
-                <h1 class="mb-4">Free Coding Tour</h1>
-                <p>Aqui encontraras cursos de programacion faciles y gratuitos 
-                    para aprender desde cero sin conocimientos previos 
-                    y sin instalar ningun software ni necesitar una computadora especial:</p>
+  <hr class="separator">
 
-                <p>
-                    <ul>
-                        <li>Totalmente gratuitos.</li>
-                        <li>Interactivos y sin necesidad de instalar software especial.</li>
-                        <li>Accesible para personas que no tienen conocimientos previos de computacion ni matematicas.</li>
-                    </ul>
-                </p>
-                
-                <h2 class="mb-4">Cursos disponibles:</h2>
-                <ul>
-                    <li>
-                        <h3><a href="./cursos/espanol/programacion/programacion.html">Programacion (ir al curso)</a></h3>
-                        <p>
-                        Curso rapido de programacion en python. Desde cero.
-                        </p>
-                    </li>
-                    <li>
-                        <h3><a href="./cursos/espanol/datascience/datascience.html">Ciencia de Datos (ir al curso)</a></h3>
-                        <p>
-                            Curso para que personas de diferentes ambitos y formaciones puedan utilizar
-                            las herramientas de la ciencia de datos en sus respectivas actividades.
-                        </p>
-                    </li>
-                    <li>
-                        <h3><a href="./cursos/espanol/deeplearning/deeplearning.html">Deep Learning (ir al curso)</a></h3>
-                        <p>
-                            Curso para que personas de diferentes ambitos y formaciones puedan utilizar
-                            las herramientas de deep learning en sus respectivas actividades.
-                        </p>
-                    </li>
-                </ul>
+  <!-- Courses Section -->
+  <section id="tours" class="courses container">
+    <h2 class="decorated-title">Coding Tours</h2>
+    <!-- Each Course Card -->
+    <div class="course-card">
+      <div class="course-info">
+            <div class="image-container">
+                <img src="./assets/img/programacion.jpeg" alt="Programacion" class="image">
+                <div class="centered-text">PROGRAMACION</div>
+            </div>
+            <div class="text">
+                <p>Curso rapido de programacion en python. Desde cero.</p>
+                <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">IR AL CURSO</a></li></ul>
+            </div>
+      </div>
+    </div>
+
+    <div class="course-card">
+        <div class="course-info">
+            
+            <div class="text">
+              <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar las 
+                herramientas de la ciencia de datos en sus respectivas actividades.</p>
+                <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">IR AL CURSO</a></li></ul>
+            </div>
+            <div class="image-container">
+                <img src="./assets/img/cienciadedatos.webp" alt="Ciencia de Datos" class="image">
+                <div class="centered-text">CIENCIA DE DATOS</div>
+              </div>
+        </div>
+      </div>
+
+      <div class="course-card">
+        <div class="course-info">
+            <div class="image-container">
+              <img src="./assets/img/ia.png" alt="Inteligencia Artificial" class="image">
+              <div class="centered-text">INTELIGENCIA ARTIFICIAL</div>
+            </div>
+            <div class="text">
+              <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar las herramientas 
+                de deep learning en sus respectivas actividades.</p>
+                <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">IR AL CURSO</a></li></ul>
             </div>
         </div>
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/main.js"></script>
-        <script src="https://getinsights.io/js/insights.js"></script>
-        <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
-        <script async defer src="https://buttons.github.io/buttons.js"></script>
-    </body>
+      </div>
+  </section>
+
+  <hr class="separator">
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact container">
+    <div class="contact-info">
+        <h2 >Contactanos</h2>
+        <p class="contact-intro">Puedes contactar conmigo a traves de mi email o linkedin. 
+            Ademas tambien por el grupo de telegram donde puedes compartir dudas con otros estudiantes:</p>
+        <p>
+            <ul>
+                <li><i class="icon fa-regular fa-envelope"></i>Email: amiune<script>document.write("@")</script><span style="display:none">@hotmail.com</span><!-- @twitter.com -->gmail.com</li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/amiune/"><i class="icon fa-brands fa-linkedin"></i>Linkedin: https://www.linkedin.com/in/amiune/</a></li>
+                <li><a target="_blank" href="https://t.me/freecodingtour"><i class="icon fa-brands fa-telegram"></i>Grupo de Telegram: https://t.me/freecodingtour</a></li>
+            </ul>
+        </p>
+    </div>
+  </section>
+
+  <hr class="separator">
+
+  <!-- Classes Section -->
+  <section id="classes" class="classes container">
+    <div class="classes-info">
+        <h2 >Clases Presenciales</h2>
+        <p class="classes-intro">Actualmente me encuentro dando clases en los siguientes institutos educativos:</p>
+
+        <p>
+            <ul>
+                <li>
+                    <a target="_blank" href="https://immune.institute/">IMMUNE</a>
+                </li>
+            </ul>
+        </p>
+    </div>
+  </section>
+
+  <hr class="separator">
+
+  <!-- About Section -->
+  <section id="about" class="about container">
+    <div class="about-info">
+        <h2 >Por que FreeCodingTour.com?</h2>
+        <p>
+            Como profesor de programacion e inteligencia artificial para alumnos sin conocimiento previo y
+            tambien universitarios siempre me enfrento con dos problemas: 
+            <ol>
+                <li>diferentes ritmos de aprendizaje de cada alumno</li>
+                <li>contenido nuevo constante</li>
+            </ol>
+            Este sitio intenta resolver esos problemas de la siguiente forma:
+            <ol>
+                <li>guia practica de problemas con soluciones para avanzar de forma autonoma</li>
+                <li>contenido actualizado, gratuito y en espanol para todos los alumnos, actuales y anteriores</li>
+            </ol>
+        </p>
+        <p>
+            A partir de esto surge un nuevo objetivo que es acercar este material didáctico y gratuito a los 
+            hispanohablantes ya que la mayoría de los cursos de programación gratuitos están en inglés
+            y que el avance de la computación y la inteligencia artificial hace que los sectores 
+            más vulnerables de habla hispana vayan quedando retrasados si no pueden aprender 
+            a utilizar estas nuevas herramientas. FreeCodingTour.com es un granito de arena para
+            ayudar a personas de diferentes formaciones y ambitos que quieren aprender a utilizarlas.
+        </p>
+        <p>
+            Estos cursos no son un reemplazo de otros cursos y mucho menos del acompañamiento 
+            presencial de profesores. 
+            Puedes conocer <a href="https://www.freecodingtour.com/index.html#classes">aqui</a> 
+            donde estoy dando clases presenciales en este momento.
+        </p>
+    </div>
+  </section>
+
+  <!-- Footer Section -->
+  <footer>
+    <div class="footer-container">
+      <div class="sitemap-section">
+        <h3>Cursos</h3>
+        <ul>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">Programacion</a></li>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">Ciencia de Datos</a></li>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">Inteligencia Artificial</a></li>
+        </ul>
+      </div>
+      <div class="sitemap-section">
+        <h3>Secciones</h3>
+        <ul>
+          <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
+        </ul>
+      </div>
+      <div class="sitemap-section">
+        <h3><a href="#">Free<br>Coding<br>Tour.</a></h3>
+      </div>
+    </div>
+  </footer>
+
+  <script>insights.init('Tchyd3Xp64Qo3Z2c');insights.trackPages();</script>
+
+</body>
 </html>
